Fix: fixing the image cut off

--- a/css/styles-med.css
+++ b/css/styles-med.css
@@ -2,7 +2,7 @@
 #reviews-container {
     border-bottom: 1px solid #d9d9d9;
     border-top: 1px solid #fff;
-    padding: 100px 5px 10px 5px;
+    padding: 600px 5px 10px 5px;
     width: 100%;
 }
 
@@ -13,7 +13,7 @@
 #restaurant-name {
     color: #f18200;
     font-family: Arial, sans-serif;
-    font-size: 12pt;
+    font-size: 18pt;
     font-weight: 200;
     letter-spacing: 0;
     margin: 0px 0 0px;
@@ -35,7 +35,7 @@
 
 #reviews-container h2 {
     color: #f58500;
-    font-size: 15pt;
+    font-size: 20pt;
     font-weight: 300;
     letter-spacing: -1px;
     padding-bottom: 2pt;
@@ -79,7 +79,7 @@ h6 {
 #restaurant-cuisine {
     background-color: #333;
     color: #ddd;
-    font-size: 12pt;
+    font-size: 15pt;
     font-weight: 300;
     letter-spacing: 10px;
     margin: 0 0 20px;
@@ -91,5 +91,5 @@ h6 {
 
 #restaurant-img {
     width: 100%;
-    height: 700px;
+    height: 600px;
 }
